@@ -1,3 +1,10 @@
+2012-11-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.21 released.
+
+        * Improved BerkeleyDB loading for FullAuto.
+
+
 2012-11-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.20 released.
